Resolved defect #758440 where sorter and pager overlapped pagination

--- a/webroot/skin/frontend/blueacorn/mis/scss/core/_common.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/core/_common.scss
@@ -1980,10 +1980,6 @@ $toolbar-icon-padding-offset: 8px;
     .col2-left-layout,
     .col2-right-layout,
     .col3-layout {
-        .sorter,
-        .pager {
-            width: 100%;
-        }
 
         .pager {
             float: left;
